--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     command: node broker.js
     environment:
       NODE_ENV: development
+      BROKER_URI: 'tcp://0.0.0.0:3000'
+    ports:
+      - "3000:3000"
 
   srv:
     build: .
@@ -17,3 +20,5 @@ services:
     command: node srv.js
     environment:
       NODE_ENV: development
+      BROKER_URI: 'tcp://broker:3000'
+      HEARTBEAT: 1
